# FinalWork2-Microservices/user/src/application/dtos/createUserRequest.ts
@@ -1,0 +1,4 @@
+export class CreateUserRequest {
+  nickname: string;
+  fullName: string;
+}
