# FinalWork2-Microservices/user/src/types.ts
@@ -3,3 +3,15 @@ export const DI = {
   UserService: Symbol('UserService'),
   UserRepository: Symbol('UserRepository'),
 };
+
+export type Attendance = {
+  id: string;
+  startDate: string;
+  endDate: string;
+  notes?: string;
+};
+
+export type ListUsersFilters = {
+  nickname?: string;
+  fullName?: string;
+};
